fixing my footer on mobile devices

--- a/components/navigation.css
+++ b/components/navigation.css
@@ -104,7 +104,7 @@
   padding: 20px;
   background-color: #282c34;
   color: white;
-  margin-top: auto;
+  margin-top: 2.5rem;
   margin-bottom: 0;
 }
 
